force-app/main/default/objects/Switching_Request__c/Switching_Request__c.object-meta.xml
<CustomObject>
    <label>Switching Request</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Switching Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Switching Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>