force-app/main/default/objects/Switching_Request__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related switching configuration record</description>
    <inlineHelpText>Select the switching configuration to use for this request</inlineHelpText>
    <label>Configuration</label>
    <referenceTo>Switching_Configuration__c</referenceTo>
    <relationshipLabel>Switching Requests</relationshipLabel>
    <relationshipName>Switching_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>