force-app/main/default/objects/Switching_Request__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related contract record</description>
    <inlineHelpText>Select the contract related to this switching request</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Switching Requests</relationshipLabel>
    <relationshipName>Switching_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>