force-app/main/default/objects/Switching_Request__c/fields/CUPS__c.field-meta.xml
<CustomField>
    <fullName>CUPS__c</fullName>
    <description>CUPS code identifying the gas supply point</description>
    <inlineHelpText>Enter the CUPS code for the gas supply point</inlineHelpText>
    <label>CUPS</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>