force-app/main/default/objects/Switching_Request__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Distributor associated with the switching request</inlineHelpText>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Switching Requests</relationshipLabel>
    <relationshipName>Switching_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>