force-app/main/default/objects/Switching_Request__c/fields/New_Supplier__c.field-meta.xml
<CustomField>
    <fullName>New_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New Supplier Requests</relationshipLabel>
    <relationshipName>New_Supplier_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>