force-app/main/default/objects/Switching_Request__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <description>Type of switching process</description>
    <inlineHelpText>Select the type of switching process</inlineHelpText>
    <label>Process Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTA_GAS</fullName>
                <label>Alta Gas</label>
            </value>
            <value>
                <fullName>BAJA_GAS</fullName>
                <label>Baja Gas</label>
            </value>
            <value>
                <fullName>CAMBIO_COMERCIALIZADORA</fullName>
                <label>Cambio Comercializadora</label>
            </value>
            <value>
                <fullName>CAMBIO_TITULAR</fullName>
                <label>Cambio Titular</label>
            </value>
            <value>
                <fullName>CAMBIO_COMERCIALIZADORA_TITULAR</fullName>
                <label>Cambio Comercializadora y Titular</label>
            </value>
            <value>
                <fullName>CAMBIO_COMERCIALIZADORA_GAS</fullName>
                <isActive>false</isActive>
                <label>CAMBIO_COMERCIALIZADORA_GAS</label>
            </value>
            <value>
                <fullName>CAMBIO_COMERCIALIZADORA_TITULAR_GAS</fullName>
                <isActive>false</isActive>
                <label>CAMBIO_COMERCIALIZADORA_TITULAR_GAS</label>
            </value>
            <value>
                <fullName>CAMBIO_TITULAR_GAS</fullName>
                <isActive>false</isActive>
                <label>CAMBIO_TITULAR_GAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>