force-app/main/default/objects/Switching_Request__c/fields/Request_XML__c.field-meta.xml
<CustomField>
    <fullName>Request_XML__c</fullName>
    <label>Request XML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>