force-app/main/default/objects/Switching_Request__c/fields/Response_XML__c.field-meta.xml
<CustomField>
    <fullName>Response_XML__c</fullName>
    <description>XML content of the response received from the distributor</description>
    <inlineHelpText>XML content of the response received from the distributor</inlineHelpText>
    <label>Response XML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>