force-app/main/default/objects/Switching_Request__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Switching Requests</relationshipLabel>
    <relationshipName>Switching_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>