force-app/main/default/objects/Switching_Request__c/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Switching Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>