force-app/main/default/objects/Switching_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Cambio Comercializadora</fullName>
            </value>
            <value>
                <fullName>Cambio Titular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 